Added GA region & removed white bar separatio, css changes

--- a/css/ebi-css-build/_ebi_masthead_styles.scss
+++ b/css/ebi-css-build/_ebi_masthead_styles.scss
@@ -254,6 +254,7 @@
 
     .masthead-black-bar nav ul.menu {
       text-align: right;
+      padding-right: 30px !important;
 
       li { float: none; display: inline-block; }
 
