--- a/css/ebi-css-build/_embl_selector.scss
+++ b/css/ebi-css-build/_embl_selector.scss
@@ -17,9 +17,9 @@
     }
 
     li.embl-selector {
-      margin-left: 0.5rem;
-      border-left: .5px solid rgba(255,255,255,.5);
-      padding-left: 1.5rem;
+      //margin-left: 0.5rem;
+      //border-left: .5px solid rgba(255,255,255,.5);
+      padding-left: 0.5rem;
     }
 
     .embl-bar {
@@ -136,7 +136,7 @@
   background: no-repeat 3px 48% url("../images/logos/EMBL-EBI/EMBL_EBI_Logo_white.svg");
   background-size: 90px;
   padding-left: 95px;
-  width: 105px;
+  width: 133px;
 }
 .custom-ebi-logo-bg-transparent-text {
   color: transparent !important;
